--- a/todo/package.json
+++ b/todo/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@module-federation/typescript": "^3.1.6",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "babel-loader": "^9.2.1",
